--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ dependencies {
   compile 'com.jakewharton:butterknife:8.8.0'
   annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
 
-  compile project(':library')
+  compile project(':editor')
 }
